k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      restartPolicy: Always
      containers:
      - name: orders
        image: image-registry.openshift-image-registry.svc:5000/frybin-dev/orders:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 60
          httpGet:
            path: /health
            port: 8080
        resources:
          limits:
            cpu: "0.50"
            memory: "128Mi"
          requests:
            cpu: "0.25"
            memory: "64Mi"
