k8s/ingress.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: orders
spec:
  to:
    kind: Service
    name: orders
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orders
            port:
              number: 8080
