k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: orders
spec:
  to:
    kind: Service
    name: orders
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
